--- a/Starpoint_forum/templates/dashboard.html
+++ b/Starpoint_forum/templates/dashboard.html
@@ -51,7 +51,7 @@
         });
     </script> -->
 
-    <h3><a href="/exchange_rates">Exchange Rates</a></h3>
+    <h1><a href="/exchange_rates">Exchange Rates</a></h1><br>
     <h3><a href="/logout">Logout</a></h3>
 </body>
 </html>
