--- a/Starpoint_forum/templates/post.html
+++ b/Starpoint_forum/templates/post.html
@@ -15,12 +15,16 @@
 
     {% for post in posts %}
         <div class="post-box">
+            <p><strong>{{ post.author.username }}</strong></p>
             <p>{{ post.content }}</p>
+            <!-- ALlows users to quickly reply to their own posts, in case additional information is required -->
             <a href="{{ url_for('reply_to_post', post_id=post.id) }}">Reply</a>
             {% if post.replies %}
                 <ul>
+                    Replies
                     {% for reply in post.replies %}
-                        <li>{{ reply.content }}</li>
+                    <p><strong>{{ reply.author.username }}</strong></p>
+                    {{ reply.content }}
                     {% endfor %}
                 </ul>
             {% endif %}
