--- a/Starpoint_forum/templates/reply.html
+++ b/Starpoint_forum/templates/reply.html
@@ -15,16 +15,19 @@
 <body>
     <h1>Forum - Reply</h1>
     <div>
+        <p><strong>{{ post.author.username }}</strong></p>
         <p>{{ post.content }}</p>
         <form action="{{ url_for('reply_to_post', post_id=post_id) }}" method="POST">
             <textarea name="reply_content" placeholder="Write your reply here"></textarea>
             <button type="submit">Reply</button>
         </form>
+        <!-- Allows users to go back to a specific post -->
         <a href="{{ url_for('display_post', post_id=post_id) }}">Back to Post</a>
         {% if post.replies %}
             <h2>Replies:</h2>
             <ul>
                 {% for reply in post.replies %}
+                <p><strong>{{ reply.author.username }}</strong></p>
                     <li>{{ reply.content }}</li>  <!-- Display the content of each reply -->
                 {% endfor %}
             </ul>
